<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
      xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutSetting"
    android:layout_width="fill_parent"
    android:layout_height="150dp">

    <RelativeLayout
        android:id="@+id/composeDishReviewTopBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#ff9933"
        android:orientation="horizontal"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/btnComposeBack"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="#ff9933"
            android:contentDescription="@string/back_button_desc"
            android:paddingBottom="8sp"
            android:paddingTop="8sp"
            android:src="@drawable/ic_back" />

        <Button
            android:id="@+id/btnComposeReview"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="#ff9933"
            android:gravity="center"
            android:text="@string/taste_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- TextView
            android:id="@+id/etWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:ems="3"
            android:text="@string/num_chars_line"
            android:textColor="#FFFFFFFF" /-->

      <!-- View
        android:layout_width="1dip"
        android:layout_height="32sp"
        android:background="#000000"
        android:layout_toLeftOf="@+id/btnComposeReview"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
    /-->

      <TextView
          android:id="@+id/tvRestaurantNameCompose"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_toRightOf="@+id/btnComposeBack"
          android:text="@string/restaurant_name_string"
          android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>
<!-- 
    <AutoCompleteTextView
        android:id="@+id/etComposeTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvComposeTags"
        android:layout_alignLeft="@+id/rbComposeReviewRatings"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/tags_text"
        android:ems="10" />
 -->
    <TextView
        android:id="@+id/tvDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etDishName"
        android:layout_alignParentLeft="true"
        android:paddingLeft="8sp"
        android:text="@string/dish_review_test"
        android:textAppearance="?android:attr/textAppearanceMedium" />

 

    <EditText
        android:id="@+id/etComposeReview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rbComposeReviewRatings"
        android:paddingRight="8sp"
        android:background="@android:color/transparent"
        android:paddingTop="16sp"
        android:paddingLeft="8sp"
        android:paddingBottom="16sp"
        android:hint="@string/compose_dish_review_hint"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:minHeight="50sp" 
        android:minLines="3" />

    <AutoCompleteTextView
        android:id="@+id/etDishName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rbComposeReviewRatings"
        android:paddingRight="16sp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/composeDishReviewTopBar"
        android:layout_marginTop="8sp"
        android:ems="10" >

        <requestFocus />
    </AutoCompleteTextView>

    <RatingBar
        android:id="@+id/rbComposeReviewRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="-16sp"
        android:paddingBottom="16sp"
        android:paddingTop="8sp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etDishName" />

    
    
   <RelativeLayout
        android:id="@+id/llDishTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etComposeReview" >



        <LinearLayout
            android:id="@+id/llEmojiRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal"
            android:weightSum="10" >
   <TextView
        android:id="@+id/tvComposeTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8sp"
        android:layout_weight="3"
        android:text="@string/tags_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
   
            <com.rockerhieu.emojicon.EmojiconEditText
                android:id="@+id/etComposeTags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:contentDescription="@string/tags_text"
                android:ems="10"
                android:text=""
                emojicon:emojiconSize="28sp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/dishEmojicons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llEmojiRow" >
        </FrameLayout>
    </RelativeLayout>
    
    
</RelativeLayout>